ARROW-6506: [C++] Fix validation of ExtensionArray with struct storage type

https://issues.apache.org/jira/browse/ARROW-6506

Closes #5340 from jorisvandenbossche/ARROW-6506-nested-extension-type-validation and squashes the following commits:

1bce476d1 <Joris Van den Bossche> run clang-format
032fe77fd <Joris Van den Bossche> lint error
5ad4a7042 <Joris Van den Bossche> ARROW-6506:  Fix validation of ExtensionArray with struct storage type

Authored-by: Joris Van den Bossche <jorisvandenbossche@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>